hphp/hack/test/sound_dynamic/typing/interfaces_2.bad.php.exp
File "interfaces_2.bad.php", line 9, characters 11-12:
Interface `I2` must extend dynamic because it extends interface `I1` which does (Typing[4402])
